objects/ASI_MFM_InventoryBalanceDetail__c.object
<CustomObject>
    <fields>
        <fullName>ASI_MFM_Action__c</fullName>
        <label>Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Aging_in_Days__c</fullName>
        <formula>IF( 
OR(TEXT(ASI_MFM_StockinDate__c)==&apos;#Error!&apos;,  ISNULL(ASI_MFM_StockinDate__c) ),
9999,
today() - ASI_MFM_StockinDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aging in Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_CN_FreeGoodsRequestQty__c</fullName>
        <label>Free Goods Request Quantity</label>
        <summarizedField>ASI_MFM_CN_JCT_FGL_IBD__c.ASI_MFM_RequestQty__c</summarizedField>
        <summaryFilterItems>
            <field>ASI_MFM_CN_JCT_FGL_IBD__c.ASI_MFM_Holdied_Quantity__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_MFM_CN_JCT_FGL_IBD__c.ASI_MFM_IBD__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_CN_SFDC_RemainQty__c</fullName>
        <formula>(ASI_MFM_JDEAvailableQuantity__c -  ASI_MFM_CN_FreeGoodsRequestQty__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SFDC Available Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_ExternalID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_InventoryBalance__c</fullName>
        <label>Inventory Balance</label>
        <referenceTo>ASI_MFM_Inventory_Balance__c</referenceTo>
        <relationshipLabel>Inventory Balance Details</relationshipLabel>
        <relationshipName>Inventory_Balance_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_ItemGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item Group</label>
        <referenceTo>ASI_MFM_Item_Group__c</referenceTo>
        <relationshipLabel>Inventory Balance Details</relationshipLabel>
        <relationshipName>Inventory_Balance_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_JDEAvailableQuantity__c</fullName>
        <label>JDE Available Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_SFDCAvailableQuantity__c</fullName>
        <label>SFDC Available Quantity (Raw)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_SFDCOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SFDC Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Inventory_Balance_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_SKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SKU</label>
        <referenceTo>ASI_MFM_SKU_Code__c</referenceTo>
        <relationshipLabel>Inventory Balance Details</relationshipLabel>
        <relationshipName>Inventory_Balance_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_StockinDate__c</fullName>
        <formula>IF((LEN(Name)==8),
IF(
ISNUMBER(Name),
DATE(VALUE(LEFT(Name, 4)), MIN(12,VALUE(MID(Name,5,2))), VALUE(RIGHT(Name, 2))),
Null
),
Null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stock In Date</label>
        <type>Date</type>
    </fields>
    <label>Inventory Balance Detail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Lot Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inventory Balance Details</pluralLabel>
    <recordTypes>
        <fullName>ASI_MFM_CN_InventoryBalanceDetailRcrdTpy</fullName>
        <active>true</active>
        <label>ASI_MFM_CN Inventory Balance Detail</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>SFDC_Available_Check</fullName>
        <active>true</active>
        <errorConditionFormula>AND(RecordType.DeveloperName == &apos;ASI_MFM_CN_InventoryBalanceDetailRcrdTpy&apos;
,ASI_MFM_CN_SFDC_RemainQty__c &lt; 0
,!ISCHANGED(ASI_MFM_JDEAvailableQuantity__c))</errorConditionFormula>
        <errorMessage>Insufficient SFDC quantity</errorMessage>
    </validationRules>
</CustomObject>